<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="raspberry_pi_ip"
        android:title="@string/pref_raspberry_pi_ip_title"
        android:summary="@string/pref_raspberry_pi_ip_summary"
        android:inputType="text" />

    <EditTextPreference
        android:key="motion_control_port"
        android:title="@string/pref_motion_control_port_title"
        android:summary="@string/pref_motion_control_port_summary"
        android:defaultValue="8000"
        android:inputType="number" />

    <EditTextPreference
        android:key="rtsp_cache_ms"
        android:title="@string/pref_rtsp_cache_ms_title"
        android:summary="@string/pref_rtsp_cache_ms_summary"
        android:defaultValue="60"
        android:inputType="number" />

    <SwitchPreferenceCompat
        android:key="rtsp_use_tcp"
        android:title="@string/pref_rtsp_use_tcp_title"
        android:summary="@string/pref_rtsp_use_tcp_summary"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="rtsp_url"
        android:title="@string/pref_rtsp_url_title"
        android:summary="@string/pref_rtsp_url_summary"
        android:defaultValue="@string/pref_rtsp_url_default"
        android:inputType="textUri" />

</PreferenceScreen>